{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 18,
  "lineage": "b0e506cb-0a55-126c-f8cb-6d0d6b7a2457",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hackathon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:709164973539:instance/i-024a6ea3a2fad4776",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024a6ea3a2fad4776",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030b741a9f9459cf1",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-3-215-134-199.compute-1.amazonaws.com",
            "public_ip": "3.215.134.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7d28540395b0910",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cdc82823a810431",
            "tags": {
              "Name": "hackathonInstance"
            },
            "tags_all": {
              "Name": "hackathonInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad67b190a9d25eb9"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.hackathon",
            "aws_subnet.hackathon",
            "aws_vpc.hackathon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hackathon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709164973539:internet-gateway/igw-0ab28ac828dc04a5f",
            "id": "igw-0ab28ac828dc04a5f",
            "owner_id": "709164973539",
            "tags": {
              "Name": "hackathon-igw"
            },
            "tags_all": {
              "Name": "hackathon-igw"
            },
            "vpc_id": "vpc-0ec04804ec96e60a3"
          },
          "dependencies": [
            "aws_vpc.hackathon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hackathon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709164973539:route-table/rtb-0629fe82715726002",
            "id": "rtb-0629fe82715726002",
            "owner_id": "709164973539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab28ac828dc04a5f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hackathon-route-table"
            },
            "tags_all": {
              "Name": "hackathon-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec04804ec96e60a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hackathon",
            "aws_vpc.hackathon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hackathon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0219364e99faad0cf",
            "route_table_id": "rtb-0629fe82715726002",
            "subnet_id": "subnet-03cdc82823a810431"
          },
          "dependencies": [
            "aws_internet_gateway.hackathon",
            "aws_route_table.hackathon",
            "aws_subnet.hackathon",
            "aws_vpc.hackathon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hackathon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709164973539:security-group/sg-0ad67b190a9d25eb9",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad67b190a9d25eb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hackathon-allow-ssh",
            "name_prefix": "",
            "owner_id": "709164973539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackathon-allow-ssh"
            },
            "tags_all": {
              "Name": "hackathon-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec04804ec96e60a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hackathon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hackathon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709164973539:subnet/subnet-03cdc82823a810431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cdc82823a810431",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "709164973539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hackathon-subnet"
            },
            "tags_all": {
              "Name": "hackathon-subnet"
            },
            "vpc_id": "vpc-0ec04804ec96e60a3"
          },
          "dependencies": [
            "aws_vpc.hackathon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hackathon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709164973539:vpc/vpc-0ec04804ec96e60a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8d24a2c569ab97a",
            "default_route_table_id": "rtb-06f32c687fdc89a2e",
            "default_security_group_id": "sg-0b09d4684e833c854",
            "dhcp_options_id": "dopt-0b3cbdc7157235089",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec04804ec96e60a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f32c687fdc89a2e",
            "owner_id": "709164973539",
            "tags": {
              "Name": "hackathon-vpc"
            },
            "tags_all": {
              "Name": "hackathon-vpc"
            }
          }
        }
      ]
    }
  ]
}